<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/newsCard_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:text="@string/temp_heading"
                    android:textSize="22sp"
                    android:textStyle="bold"></com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:maxLines="1"
                    android:text="@string/temp_source"
                    android:textColor="@color/purple_500"
                    android:textSize="18sp"
                    android:textStyle="bold"></com.google.android.material.textview.MaterialTextView>
            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_headline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_image_not_supported_24"></com.google.android.material.imageview.ShapeableImageView>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/article_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/temp_preveiw">

        </com.google.android.material.textview.MaterialTextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/but_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="#6200ED"
                android:padding="12dp"
                android:textSize="12sp"
                app:srcCompat="@drawable/ic_baseline_download_24"
                app:tint="#FFFFFF">

            </ImageButton>

            <ImageButton
                android:id="@+id/but_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="#6200ED"
                android:padding="12dp"
                android:textSize="12sp"
                app:srcCompat="@drawable/ic_baseline_bookmark_border_24"
                app:tint="#FFFFFF">

            </ImageButton>

            <ImageButton
                android:id="@+id/but_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:backgroundTint="#6200ED"
                android:padding="12dp"
                android:textSize="12sp"
                app:srcCompat="@drawable/ic_baseline_share_24"
                app:tint="#FFFFFF">

            </ImageButton>

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>